# alertmcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_JA.md  pyproject.toml  uv.toml
alertmcp/: __init__.py  __main__.py  server.py
